# multi-agent-pipeline

./: .env.local.example  .gitignore  Cargo.toml  README.md  SKILL.md
agents/: openai.yaml
examples/: mock-codex-vhs.zsh  tui_wizard_demo.tape
examples/safe-dispatch-service/: README.md  app.py  client.py  console.py  runtime-check.json
references/: agency-role-map.md  decomposition-rules.md  review-rubric.md  verification-rubric.md
scripts/: cache_utils.py  init_run.py  map.py  run_stage.py  tui_pexpect_smoke.py
src/: engine.rs  main.rs  runtime.rs  tui.rs
tests/: agpipe_cli.rs  agpipe_tui.rs
