[package]
name = "agpipe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agpipe"
path = "src/main.rs"

[dependencies]
crossterm = "=0.27.0"
ratatui = "=0.26.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
curl = "0.4"

[dev-dependencies]
portable-pty = "0.8"
vt100 = "0.15"
